--- a/.github/workflows/update-pdf.yaml
+++ b/.github/workflows/update-pdf.yaml
@@ -18,42 +18,38 @@ jobs:
       - name: Install LaTeX
         run: |
           sudo apt-get update
-          sudo apt-get install -y texlive-full biber make
+          sudo apt-get install -y texlive-full texlive-latex-extra texlive-fonts-recommended texlive-bibtex-extra biber make
 
-      # Step 3: Compile notes.pdf (senza compile.sh, gestisce errori)
-      - name: Compile notes.pdf
+      # Step 3: Check if required files exist
+      - name: Check LaTeX source files
         run: |
-          if [ -f "makefile" ]; then
-            make notes || echo "makefile failed, trying pdflatex..."
-          fi
-          if [ -f "notes.tex" ]; then
-            pdflatex notes.tex || echo "Failed to compile notes.tex"
-          fi
+          ls -R  # Mostra tutti i file presenti (utile per debug)
+          if [ ! -f "overleaf.tex" ]; then echo "❌ ERRORE: overleaf.tex non trovato!"; exit 1; fi
+          if [ ! -d "setup" ]; then echo "⚠️ ATTENZIONE: Cartella setup/ non trovata!"; fi
+          if [ ! -d "chapters" ]; then echo "⚠️ ATTENZIONE: Cartella chapters/ non trovata!"; fi
 
-      # Step 4: Compile overleaf.pdf (se esiste il file)
+      # Step 4: Compile overleaf.pdf (cattura errori LaTeX)
       - name: Compile overleaf.pdf
         run: |
-          if [ -f "makefile" ]; then
-            make overleaf || echo "makefile failed, trying pdflatex..."
-          fi
-          if [ -f "overleaf.tex" ]; then
-            pdflatex overleaf.tex || echo "Failed to compile overleaf.tex"
-          fi
+          pdflatex -interaction=nonstopmode -halt-on-error overleaf.tex || (echo "❌ ERRORE LaTeX: Guarda il log sopra" && exit 1)
+          bibtex overleaf || echo "⚠️ BibTeX fallito, ma continuo..."
+          pdflatex -interaction=nonstopmode -halt-on-error overleaf.tex
+          pdflatex -interaction=nonstopmode -halt-on-error overleaf.tex
 
       # Step 5: Create output directory and move PDFs
       - name: Prepare PDFs for deployment
         run: |
           mkdir -p output
-          if [ -f "notes.pdf" ]; then mv notes.pdf output/; fi
-          if [ -f "overleaf.pdf" ]; then mv overleaf.pdf output/; fi
+          if [ -f "overleaf.pdf" ]; then mv overleaf.pdf output/; else echo "❌ ERRORE: overleaf.pdf non trovato!"; exit 1; fi
 
-      # Step 6: Deploy to PDF branch (crea la branch se non esiste)
+      # Step 6: Deploy to PDF branch
       - name: Deploy to PDF branch
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: pdf   # Crea automaticamente la branch PDF
-          publish_dir: output   # Carica i PDF
-          force_orphan: true    # Assicura che la branch contenga solo i PDF
-          keep_files: false     # Sovrascrive i vecchi PDF
-          commit_message: "Update PDFs (notes.pdf and overleaf.pdf)"
+          publish_branch: pdf
+          publish_dir: output
+          force_orphan: true
+          keep_files: false
+          commit_message: "Up
+
